# AffectExMachina

./: .gitignore  JUSTFile  README.md  pyproject.toml  requirements.txt
overview/: _quarto.yml  overview.qmd  references.bib  styles.css
scripts/: reproduce.py  run_setup.py
scripts/misc/: clean_bibtex.py
source/:  bootstrapping.ipynb  arxiv_figures.R  arxiv_results.R  bash_scripting.ipynb  beauty_plus_lang.R  beauty_regression.ipynb  best_models.csv  bootstrapping.py  bootstrapping.sh  conference.R  cross_decoding.ipynb  cross_decoding.py  cross_decoding.sh  custom_models.ipynb  dataset.py  dataset_bootstrap.py  deepdive_convert.ipynb  feature_analysis.py  feature_analysis1.py  feature_analysis2.py  feature_analysis3.py  feature_metrics.ipynb  feature_stats.ipynb  iaea_slides.R  load_data.ipynb  main_results.R  metric_analysis.R  metric_permutations.py  noise_ceiling.ipynb  presentation.R  processing.py  random.R  requirements.txt  scratchpad.R  subject_regressions.ipynb  subject_regressions.py  subject_regressions.sh
source/analysis/: beauty_plus_lang.R  metric_analysis.R
source/codebase/: alexnet_special.ipynb  effective_dims.R  effective_dims.ipynb  feature_metrics1.ipynb  feature_regression.py  get_feature_maps.py  get_feature_metrics1.py  get_feature_metrics2.py  get_sparsity_maps.py  image_ops.ipynb  image_ops.py  oasis_regression.ipynb  oasis_regression.py  processing1.ipynb  processing2.ipynb  seer_models.ipynb  seer_models.py  slip_models.ipynb  slip_models.py  stepwise_regressions2.py  stepwise_regressions3.py  task_effect_dims.csv  train_config.yaml  (+3 more)
(+44 files in other folders)
